deploy react app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/JonShawTech/Astrogram",
+  "homepage": "http://JonShawTech.github.io/astrogram",
   "name": "astrogram",
   "version": "0.1.0",
   "private": true,
